force-app/main/default/objects/Campaign_Expense__c/Campaign_Expense__c.object-meta.xml
<CustomObject>
    <description>Tracks expenses associated with a Campaign for financial reporting and ROI calculation.</description>
    <label>Campaign Expense</label>
    <nameField>
        <displayFormat>EXP-{0000}</displayFormat>
        <label>Expense Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Campaign Expenses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>